tests/cases/meta/errors/meta-function-type-constructor-empty.ari
meta fn empty_type(input: type) -> type {
  return type!();
}

fn main() -> i64 {
  return 0;
}
